k8s/gpu-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-test
  namespace: default
spec:
  runtimeClassName: nvidia
  containers:
  - name: gpu-test
    image: nvidia/cuda:12.2.0-base-ubuntu22.04
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "nvidia-smi; while true; do sleep 30; done;" ]
    resources:
      requests:
        nvidia.com/gpu-all: "1"
      limits:
        nvidia.com/gpu-all: "1"
  restartPolicy: Never
